--- a/samples/Dockerfile
+++ b/samples/Dockerfile
@@ -2,10 +2,12 @@ FROM debian:buster
 
 RUN apt-get update
 
-#RUN Expect "spawn apt-get install nginx; send"
-
 RUN apt-get -y install nginx
 
 EXPOSE 443
 
-CMD ["/bin/bash"]
+ADD tools /
+
+ADD conf /
+
+CMD ["/bin/bash", "tools/post_setup.sh"]
