nginx container still in process

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,13 @@
 FROM debian:buster
 
-RUN apt-get update
-RUN apt-get install nginx
+ADD tools /tools
+
+ADD conf /conf
+
+RUN /bin/bash /tools/default_setup.sh
 
 EXPOSE 443
+EXPOSE 80
 
-CMD ["tail -f"]
+CMD ["/bin/bash", "tools/post_setup.sh"]
+
