--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -50,18 +50,20 @@ server {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
                 try_files $uri $uri/ =404;
+                try_files $uri $uri/ /index.php$is_args$args;
+                autoindex on;
         }
 
         # pass PHP scripts to FastCGI server
         #
-        #location ~ \.php$ {
-        #       include snippets/fastcgi-php.conf;
-        #
+        location ~ \.php$ {
+              include snippets/fastcgi-php.conf;
+        
         #       # With php-fpm (or other unix sockets):
         #       fastcgi_pass unix:/run/php/php7.3-fpm.sock;
         #       # With php-cgi (or other tcp sockets):
-        #       fastcgi_pass 127.0.0.1:9000;
-        #}
+              fastcgi_pass wordpress:9000;
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
