--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -49,7 +49,7 @@ server {
         location / {
                 # First attempt to serve request as file, then
                 # as directory, then fall back to displaying a 404.
-                try_files $uri $uri/ =404;
+                #try_files $uri $uri/ =404;
                 try_files $uri $uri/ /index.php$is_args$args;
                 autoindex on;
         }
@@ -58,10 +58,11 @@ server {
         #
         location ~ \.php$ {
               include snippets/fastcgi-php.conf;
+              include fastcgi_params;
         
-        #       # With php-fpm (or other unix sockets):
-        #       fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-        #       # With php-cgi (or other tcp sockets):
+              # With php-fpm (or other unix sockets):
+              #fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+              # With php-cgi (or other tcp sockets):
               fastcgi_pass wordpress:9000;
         }
 
