--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     build: requirements/nginx
     image: nginx
     container_name: nginx
-    restart: always
+    depends_on:
+      - mariadb
+      - wordpress
+    restart: unless-stopped
     env_file:
       - .env
     volumes:
@@ -21,21 +24,21 @@ services:
     build: requirements/wordpress
     image: wordpress
     container_name: wordpress
-    restart: always
+    restart: unless-stopped
+    depends_on:
+      - mariadb
     env_file:
       - .env
     volumes:
       - WordPress:${WORDPRESS_SERVED_FILES_PATH}
     networks:
       - inception
-    expose:
-      - 9000
 
   mariadb:
     build: requirements/mariadb
     image: mariadb
     container_name: mariadb
-    restart: always
+    restart: unless-stopped
     env_file:
       - .env
     volumes:
