--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,5 @@
 DOMAIN_NAME=yarroubi.42.fr
 
-# certificates
-NGINX_SSL_KEY=/conf/nginx-selfsigned.key
-NGINX_SSL_CRT=/conf/nginx-selfsigned.crt
-
 
 # NGINX SETUP
 NGINX_SERVED_FILES_PATH=/var/www/html
@@ -16,6 +12,8 @@ MYSQL_DB_PATH=/var/lib/mysql/wordpress/
 
 
 # WORDPRESS SETUP
+WORDPRESS_DB=wordpress
+
 WORDPRESS_ADMIN=wordpress_owner
 WORDPRESS_ADMIN_PASSWORD=L+H}g_W4;]/_xPT+
 
