mysql almost done

--- a/srcs/.env
+++ b/srcs/.env
@@ -15,10 +15,10 @@ MYSQL_DB_PATH=/var/lib/mysql/wordpress/
 WORDPRESS_DB=wordpress
 
 WORDPRESS_ADMIN=wordpress_owner
-WORDPRESS_ADMIN_PASSWORD=L+H}g_W4;]/_xPT+
+WORDPRESS_ADMIN_PASSWORD=OwnerPassword
 
 WORDPRESS_REGULAR_USER=younes
-WORDPRESS_REGULAR_USER_PASSWORD=C?yv#4R7ku]vFT.
+WORDPRESS_REGULAR_USER_PASSWORD=YounessPassword
 
 WORDPRESS_SERVED_FILES_PATH=/var/www/html
 
