--- a/srcs/.env
+++ b/srcs/.env
@@ -6,7 +6,7 @@ NGINX_SERVED_FILES_PATH=/var/www/html
 
 
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=zJV^nW%N8U%3>)~=
+MYSQL_ROOT_PASSWORD=root2root
 
 MYSQL_DB_PATH=/var/lib/mysql/wordpress/
 
