--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,6 @@
-DOMAIN_NAME=yarroubi.42.fr
+# DOMAIN_NAME=yarroubi.42.fr
+DOMAIN_NAME=localhost
+HOME_PAGE_TITLE=Home
 
 
 # NGINX SETUP
@@ -8,6 +10,8 @@ NGINX_SERVED_FILES_PATH=/var/www/html
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=root2root
 
+MYSQL_HOST_NAME=mariadb
+
 MYSQL_DB_PATH=/var/lib/mysql
 
 
@@ -16,9 +20,11 @@ WORDPRESS_DB=wordpress
 
 WORDPRESS_ADMIN=wordpress_owner
 WORDPRESS_ADMIN_PASSWORD=OwnerPassword
+WORDPRESS_ADMIN_EMAIL=yarroubi@student.1337.ma
 
 WORDPRESS_REGULAR_USER=younes
 WORDPRESS_REGULAR_USER_PASSWORD=YounessPassword
+WORDPRESS_REGULAR_USER_EMAIL=${WORDPRESS_REGULAR_USER}@gmail.com
 
 WORDPRESS_SERVED_FILES_PATH=/var/www/html
 
