--- a/srcs/.env
+++ b/srcs/.env
@@ -30,6 +30,11 @@ WORDPRESS_SERVED_FILES_PATH=/var/www/html
 
 
 # VOLUMES SETUP
-VOLUME_DB_PATH=/goinfre/yarroubi/dockerSharedFiles/DB
 
-VOLUME_WORDPRESS_PATH=/goinfre/yarroubi/dockerSharedFiles/WordPress
+UBUNTU_VOLUMES_PATH = /home/yarroubi/data
+MAC_VOLUMES_PATH = /goinfre/yarroubi/dockerSharedFiles
+
+VOLUMES_PATH = $(MAC_VOLUMES_PATH)
+
+VOLUME_DB_PATH=$(VOLUMES_PATH)/DB
+VOLUME_WORDPRESS_PATH=$(VOLUMES_PATH)/WordPress
