--- a/srcs/.env
+++ b/srcs/.env
@@ -34,7 +34,7 @@ WORDPRESS_SERVED_FILES_PATH=/var/www/html
 UBUNTU_VOLUMES_PATH = /home/yarroubi/data
 MAC_VOLUMES_PATH = /goinfre/yarroubi/dockerSharedFiles
 
-VOLUMES_PATH = $(MAC_VOLUMES_PATH)
+VOLUMES_PATH = ${MAC_VOLUMES_PATH}
 
-VOLUME_DB_PATH=$(VOLUMES_PATH)/DB
-VOLUME_WORDPRESS_PATH=$(VOLUMES_PATH)/WordPress
+VOLUME_DB_PATH=${VOLUMES_PATH}/DB
+VOLUME_WORDPRESS_PATH=${VOLUMES_PATH}/WordPress
