--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
-# DOMAIN_NAME=yarroubi.42.fr
-DOMAIN_NAME=localhost
+DOMAIN_NAME=yarroubi.42.fr
+# DOMAIN_NAME=localhost
 HOME_PAGE_TITLE=Home
 
 
@@ -34,7 +34,7 @@ WORDPRESS_SERVED_FILES_PATH=/var/www/html
 UBUNTU_VOLUMES_PATH = /home/yarroubi/data
 MAC_VOLUMES_PATH = /goinfre/yarroubi/dockerSharedFiles
 
-VOLUMES_PATH = ${MAC_VOLUMES_PATH}
+VOLUMES_PATH = ${UBUNTU_VOLUMES_PATH}
 
 VOLUME_DB_PATH=${VOLUMES_PATH}/DB
 VOLUME_WORDPRESS_PATH=${VOLUMES_PATH}/WordPress
